macros/tests/ui/unknown_sql_database_setup_struct_key.rs
use easy_sql_macros::DatabaseSetup;

#[derive(DatabaseSetup)]
#[sql(drivres = Driver)]
struct BadDatabaseSetupStructAttr;

fn main() {}
